# qa-auto-engineer-python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_gcd.py  brain_prime.py  brain_progression.py
tmp/: demo_progression.sh
