[project]
name = "hexlet-code"
version = "0.7.0"
description = "Brain Games - a set of mathematical mini-games"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Denis Zhutaev", email = "zhutaev.d@gmail.com" }
]
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.ruff]
line-length = 80

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "C90"]
